--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ public class HelloWorld {
                 which can be accessed using an index. It is used to store multiple values in a single variable, instead
                 of declaring separate variables for each value.
             </p>
-            <img src="../ar.img.jpg" width="100%" height="500" alt="loading">
+            <img src="./ar.img.jpg" width="100%" height="500" alt="loading">
             <h3>Charactorstics Of Array</h3>
             <ul>
                 <li>Fixed Size :
@@ -220,7 +220,7 @@ public class HelloWorld {
                 and all other nodes are connected by edges forming a hierarchical structure. Each node can have zero or
                 more child nodes, and there are no cycles in a tree.
             </p>
-            <img src="../tree.img.jpg" width="100%" height="500" alt="loading">
+            <img src="./tree.img.jpg" width="100%" height="500" alt="loading">
             <h3>Charactorstics Of Tree</h3>
             <ul>
                 <li>Hierarchical Structure :
@@ -318,7 +318,7 @@ public class HelloWorld {
                 computer networks, etc.
 
             </p>
-            <img src="../graph.img.jpg" width="100%" height="500" alt="loading">
+            <img src="./graph.img.jpg" width="100%" height="500" alt="loading">
             <h3>Charactorstics Of Graph</h3>
             <ul>
                 <li>Vertices and Edges :
