--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn Java Free</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -79,12 +80,12 @@
                 </li>
             </ul>
             <h2>Basic Syntax</h2>
-            <pre style="background-color: antiquewhite;">// This is a simple Java program
-public class HelloWorld {
+            <pre>// This is a simple Java program
+     public class HelloWorld {
 
-    public static void main(String[] args) {
+       public static void main(String[] args) {
 
-        System.out.println("Hello, World!");
+         System.out.println("Hello, World!");
     
     }
 
